--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -232,6 +232,14 @@
       margin-left: auto;
     }
 
+    /* Image formatting */
+    main img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 1rem auto;
+    }
+
     /* Hide nav by default on mobile */
     @media (max-width: 768px) {
       nav.header-nav {
