--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -272,6 +272,13 @@
         width: 100%;
         margin-left: 0;
       }
+
+      main img {
+        width: 50%;
+        max-width: 50%;
+        margin-left: 0;
+        margin-right: auto;
+      }
     }
   </style>
 </head>
