--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -235,8 +235,9 @@
     main img {
       width: 50%;
       max-width: 50%;
-      margin-left: 0;
-      margin-right: auto;
+      height: auto;
+      display: block;
+      margin-right: 1rem 0;
     }
 
     /* Hide nav by default on mobile */
@@ -274,9 +275,8 @@
 
       /* Image formatting */
       main img {
+        width: 100%;
         max-width: 100%;
-        height: auto;
-        display: block;
         margin: 1rem auto;
       }
 
