Included AI Generator for testing in live site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -316,6 +316,7 @@
         <li>📁 <a href="{{ '/indexes/categories' | relative_url }}">Browse by Category</a></li>
         <li>🏷️ <a href="{{ '/indexes/proteins' | relative_url }}">Browse by Protein</a></li>
         <li>🔤 <a href="{{ '/indexes/alphabet' | relative_url }}">A–Z Index</a></li>
+        <li><a href="{{ '/ai_generator' | relative_url }}">Yumlog Recipe Generator</a></li>
       </ul>
     </nav>
     <div class="signoff"> - Made with 🧡 by Tim &amp; Zoe - </div>
